# panda-os

./: .gdbinit  .gitignore  .gitmodules  2026-01-25-4-13pm.ppm  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY_AUDIT.md  TODO.md  rust-toolchain.toml  x86_64-panda-uefi.json  x86_64-panda-userspace.json  x86_64-panda-userspace.ld
.cargo/: config.toml
.claude/commands/: create-issue.md
.github/workflows/: ci.yml  claude-autofix.yml  claude-code-review.yml  claude.yml
crates/panda-elf/: Cargo.toml
crates/panda-elf/src/: lib.rs
crates/ring-buffer/: Cargo.toml
crates/ring-buffer/src/: lib.rs
docs/: ASYNC_VFS_EXT2.md  BUILDING.md  DEVICE_PATHS.md  HIGHER_HALF_KERNEL.md  IPC.md  KERNEL_INTERNALS.md  PIPELINES.md  SYSCALLS.md  TESTING.md  VFS.md  VIRTUAL_ADDRESS_SPACE.md
firmware/: OVMF_CODE_4M.fd
panda-abi/: Cargo.toml
panda-abi/src/: encoding.rs  lib.rs  path.rs  terminal.rs  value.rs
panda-kernel/: Cargo.toml
panda-kernel/src/: context.rs  device_address.rs  device_path.rs  devices.rs  exec.rs  handle.rs  initrd.rs  interrupts.rs  ioapic.rs  lib.rs  logging.rs  main.rs  panic.rs  pci.rs  process.rs  process_handle.rs  process_info.rs  qemu.rs  resource.rs  scheduler.rs  syscall.rs  testing.rs  time.rs  uefi.rs  waker.rs
panda-kernel/src/acpi/: handler.rs
panda-kernel/src/apic/: ioapic.rs  mod.rs  timer.rs
panda-kernel/src/compositor/: mod.rs
panda-kernel/src/devices/: virtio_block.rs  virtio_hal.rs  virtio_keyboard.rs
panda-kernel/src/devices/virtio_block/: futures.rs  mod.rs  request.rs  transport.rs
panda-kernel/src/devices/virtio_gpu/: mod.rs
panda-kernel/src/executor/: async_mutex.rs  join.rs  mod.rs  sleep.rs  waker.rs
panda-kernel/src/memory/: address.rs  address_space.rs  demand_paging.rs  dma.rs  frame.rs  global_alloc.rs  mapping.rs  mmio.rs  mod.rs  paging.rs  phys.rs  recursive.rs  smap.rs  write_protection.rs
panda-kernel/src/pci/: device.rs  msix.rs  virtio_config.rs
panda-kernel/src/process/: elf.rs  exec.rs  info.rs  mod.rs  state.rs  waker.rs
panda-kernel/src/resource/: block.rs  buffer.rs  channel.rs  char_output.rs  directory.rs  event_source.rs  mailbox.rs  mod.rs  process.rs  process_resource.rs  scheme.rs  spawn_handle.rs  surface.rs  window.rs
panda-kernel/src/scheduler/: context_switch.rs  deadline.rs  mod.rs  rtc.rs
panda-kernel/src/syscall/: buffer.rs  channel.rs  directory.rs  entry.rs  environment.rs  file.rs  gdt.rs  mailbox.rs  mod.rs  process.rs  surface.rs  user_ptr.rs
panda-kernel/src/vfs/: mod.rs  tarfs.rs
panda-kernel/src/vfs/ext2/: bitmap.rs  dir.rs  file.rs  guards.rs  mod.rs  structs.rs
panda-kernel/tests/: apic.rs  basic.rs  block.rs  device_path.rs  elf_security.rs  ext2_validation.rs  ext2_write.rs  fmask.rs  heap.rs  mailbox.rs  memory.rs  nx_bit.rs  pci.rs  process.rs  raii.rs  resource.rs  scheduler.rs  signal.rs  smap.rs  vfs_path.rs
plans/: DEVICE_PATHS.md  STRUCTURED_PIPELINES.md  TERMINAL_COMMANDS.md  TERMINAL_IPC.md  syscall-futures-migration.md  system-init-tool.md  virtio-gpu-3d-composition.md
scripts/: run-qemu-keyboard-test.sh  run-qemu-test.sh  run-tests.sh  setup-kernel-test.sh  setup-userspace-test.sh
src/: acpi.rs  devices.rs  interrupts.rs  main.rs  panic.rs  pci.rs  uefi.rs
src/acpi/: handler.rs
src/devices/virtio_gpu/: mod.rs
src/memory/: global_alloc.rs  heap_allocator.rs  mod.rs
userspace/cat/: Cargo.toml
userspace/cat/src/: main.rs
userspace/hello/: Cargo.toml
userspace/hello/src/: main.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/libpanda/: Cargo.toml
userspace/libpanda/src/: buffer.rs  channel.rs  env.rs  environment.rs  error.rs  file.rs  handle.rs  heap.rs  keyboard.rs  lib.rs  mailbox.rs  print.rs  process.rs  startup.rs  stdio.rs  syscall.rs  terminal.rs
userspace/libpanda/src/graphics/: mod.rs  pixels.rs  surface.rs
userspace/libpanda/src/io/: file.rs  mod.rs
userspace/libpanda/src/ipc/: channel.rs  mod.rs
userspace/libpanda/src/process/: child.rs  mod.rs
userspace/libpanda/src/sys/: buffer.rs  channel.rs  env.rs  file.rs  mailbox.rs  mod.rs  process.rs  surface.rs
userspace/ls/: Cargo.toml
userspace/ls/src/: main.rs
userspace/shell/: Cargo.toml
userspace/shell/src/: main.rs
userspace/terminal/: Cargo.toml
userspace/terminal/src/: commands.rs  input.rs  main.rs  render.rs
userspace/tests/alpha_test/: Cargo.toml  expected.txt
userspace/tests/api_test/: Cargo.toml
userspace/tests/args_child/: Cargo.toml
userspace/tests/args_test/: Cargo.toml  expected.txt
userspace/tests/block_test/: Cargo.toml  expected.txt
userspace/tests/buffer_test/: Cargo.toml  expected.txt
userspace/tests/channel_child/: Cargo.toml
userspace/tests/channel_test/: Cargo.toml  expected.txt
userspace/tests/control_plane_child/: Cargo.toml
userspace/tests/control_plane_test/: Cargo.toml  expected.txt
userspace/tests/device_path_test/: Cargo.toml
userspace/tests/env_child/: Cargo.toml
userspace/tests/env_test/: Cargo.toml  expected.txt
userspace/tests/error_test/: Cargo.toml
userspace/tests/ext2_create_test/: Cargo.toml  expected.txt  expected_debugfs.txt
userspace/tests/ext2_mkdir_test/: Cargo.toml  expected.txt  expected_debugfs.txt
userspace/tests/ext2_test/: Cargo.toml  expected.txt
userspace/tests/ext2_write_test/: Cargo.toml  expected.txt  expected_debugfs.txt
userspace/tests/fault_child/: Cargo.toml
userspace/tests/fault_recovery_test/: Cargo.toml  expected.txt  expected_fault.txt
userspace/tests/fmask_test/: Cargo.toml  expected.txt
userspace/tests/handle_limit_test/: Cargo.toml  expected.txt
userspace/tests/heap_test/: Cargo.toml  expected.txt
userspace/tests/keyboard_test/: Cargo.toml  expected.txt  monitor.txt
userspace/tests/mailbox_child/: Cargo.toml
userspace/tests/mailbox_keyboard_test/: Cargo.toml  expected.txt  monitor.txt
userspace/tests/mailbox_overflow_child/: Cargo.toml
userspace/tests/mailbox_overflow_test/: Cargo.toml  expected.txt
userspace/tests/mailbox_test/: Cargo.toml  expected.txt
userspace/tests/pipeline_test/: Cargo.toml  (+1 more)
(+95 files in other folders)
