[workspace]
resolver = "3"
members = ["panda-abi", "panda-kernel", "userspace/init", "userspace/shell", "userspace/libpanda", "userspace/tests/vfs_test", "userspace/tests/preempt_test", "userspace/tests/preempt_child", "userspace/tests/spawn_test", "userspace/tests/spawn_child", "userspace/tests/yield_test", "userspace/tests/yield_child", "userspace/tests/heap_test", "userspace/tests/print_test", "userspace/tests/resource_test", "userspace/tests/keyboard_test", "userspace/tests/state_test"]

[workspace.dependencies]
acpi = "6.0"
linked_list_allocator = { version = "0.10", features = ["use_spin"] }
log = "0.4"
spinning_top = "0.3.0"
uefi = { version = "0.36" }
virtio-drivers = "0.12"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
goblin = { version = "0.10", default-features = false, features = ["alloc", "elf32", "elf64", "endian_fd"] }
tar-no-std = { version = "0.4", default-features = false }
