[workspace]
resolver = "3"
members = ["panda-abi", "panda-kernel", "userspace/init", "userspace/terminal", "userspace/libpanda", "userspace/tests/vfs_test", "userspace/tests/preempt_test", "userspace/tests/preempt_child", "userspace/tests/spawn_test", "userspace/tests/spawn_child", "userspace/tests/yield_test", "userspace/tests/yield_child", "userspace/tests/heap_test", "userspace/tests/print_test", "userspace/tests/resource_test", "userspace/tests/keyboard_test", "userspace/tests/state_test", "userspace/tests/readdir_test", "userspace/tests/buffer_test", "userspace/tests/surface_test", "userspace/tests/window_test", "userspace/tests/multi_window_test", "userspace/tests/alpha_test", "userspace/tests/partial_refresh_test", "userspace/tests/window_move_test", "userspace/tests/block_test", "userspace/tests/ext2_test"]

[workspace.dependencies]
acpi = "6.0"
linked_list_allocator = { version = "0.10", features = ["use_spin"] }
log = "0.4"
spinning_top = "0.3.0"
uefi = { version = "0.36" }
virtio-drivers = "0.12"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
zerocopy = { version = "0.8.24", features = ["derive"] }
goblin = { version = "0.10", default-features = false, features = ["alloc", "elf32", "elf64", "pe64", "endian_fd"] }
tar-no-std = { version = "0.4", default-features = false }
async-trait = "0.1"

# Required for no_std with -Zbuild-std: ensures core/alloc are built with
# abort-on-panic since we have no unwinding runtime support.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Note: We use 'cargo build --tests' instead of 'cargo test' to build kernel tests.
# This avoids the dual-profile issue where cargo test builds dependencies in both
# test and dev profiles, causing duplicate core crates with build-std.
