[package]
name = "panda-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = { workspace = true }
linked_list_allocator = { workspace = true }
log = { workspace = true }
spinning_top = { workspace = true }
uefi = { workspace = true }
virtio-drivers = { workspace = true }
x86_64 = { workspace = true }
goblin = { workspace = true }
libpanda = { path = "../userspace/libpanda" }

[lib]
name = "panda_kernel"
test = false
bench = false

[[bin]]
name = "panda-kernel"
test = false
bench = false

[[test]]
name = "basic"
harness = false

[[test]]
name = "heap"
harness = false

[[test]]
name = "pci"
harness = false
