[package]
name = "panda-kernel"
version = "0.1.0"
edition = "2024"

[features]
default = []
testing = []

[dependencies]
acpi = { workspace = true }
linked_list_allocator = { workspace = true }
log = { workspace = true }
spinning_top = { workspace = true }
uefi = { workspace = true }
virtio-drivers = { workspace = true }
x86_64 = { workspace = true }
zerocopy = { workspace = true }
goblin = { workspace = true }
tar-no-std = { workspace = true }
panda-abi = { path = "../panda-abi" }
async-trait = { workspace = true }

[lib]
name = "panda_kernel"
test = false
bench = false

[[bin]]
name = "panda-kernel"
test = false
bench = false

[[test]]
name = "basic"
harness = false

[[test]]
name = "heap"
harness = false

[[test]]
name = "pci"
harness = false

[[test]]
name = "memory"
harness = false

[[test]]
name = "scheduler"
harness = false

[[test]]
name = "process"
harness = false

[[test]]
name = "nx_bit"
harness = false

[[test]]
name = "raii"
harness = false

[[test]]
name = "apic"
harness = false

[[test]]
name = "resource"
harness = false

[[test]]
name = "block"
harness = false
